# CITS3003-graphics-animation

cits3003_labs/: CMakeLists.txt  CMakePresets.json  lab1_example1  lab1_q1circle  lab1_q2pointsScene
cits3003_labs/helpers/: ShaderHelper.cpp  ShaderHelper.h
cits3003_labs/lab1/: example1.cpp  example2.cpp  lab1.html  q1circle.cpp  q2pointsScene.cpp  q3triangleScene.cpp
cits3003_labs/lab2/lab2/: lab2.html
cits3003_labs/lab2/lab2/media/: lab2_q2.mov
cits3003_labs/res/shaders/: fshader21.glsl  vshader21.glsl  vshader24.glsl
